[package]
name = "mirage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
html-escape = "0.2.13"
percent-encoding = "2.3.2"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
rkyv = { version = "0.8.15", features = ["std", "bytecheck"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = "2.5.8"
